                   ----------------------------------------
                   | CHANGES of the numericalsgps package |
                   ----------------------------------------

#======
1.3.1 -> 1.3.1 dev
- Bibliography update 
- Priority arguments added to membership methods for numerical semigroups

#======
1.3.0 -> 1.3.0 dev
- LegendrianGenericNumericalSemigroup
- AperyList now works for an ideal, and computes the Apéry list wrt the multiplicity of its ambient numerical semigroup
- Added SpecialArfGaps, IsArfIrreducible, ArfOverSemigroups, DecomposeIntoArfIrreducibles 
- Added DenumerantIdeal
- Remove IsRectangularTable as filter 
- Added IsUniversallyFreeNumericalSemigroup
- BinomialIdealOfNumericalSemigroup

#======
1.2.2 -> 1.3.0
- Addeed NearlyGorensteinVectors
- Added CircuitsOfKernelCongruence, PrimitiveRelationsOfKernelCongruence, IsMinimalRelationOfNumericalSemigroup, AllMinimalRelationsOfNumericalSemigroup
- Added IsAlmostCanonicalIdeal, IsNearlyGorenstein, IsGeneralizedAlmostSymmetric, IsHomogeneousNumericalSemigroup, AsNumericalDuplication, DilatationOfNumericalSemigroup, RFMatrices (by Francesco Strazzanti)
- Added new section in the chapter of factorizationas, and moved IsMpure and IsPure to this new section
- Added PseudoFrobenius, Type and FrobeniusNumber for an ideal of a numerical semigroup 
- Added IsComplementOfIntegralIdeal and IdealByDivisorClosedSet
- ViewString for affine semigroups now considers singular in a single generator or minimal generator
- Decomposition of ideals into irreducibles (by Jorge Angulo)
- NumericalSemgigroupByNuSequence and NumericalSemgigroupByTauSequence (by Jorge Angulo)

#======
1.2.1 -> 1.2.2
- Bug fix for DivisorsOfElementInNumericalSemigroup(0,s).
- Bug fix in proportionally modular affine semigroups of dimenstion two
- Added IsSubset for ideals of numerical semigroups
- Disabled GradedModules

#=======
1.2.0 -> 1.2.1
- Changes in tests to fit new version of gapdays