@@ -4,6 +4,7 @@
 
 #======
 1.3.1 -> 1.3.1 dev
+- Added sum of two numerical semigroups
 - Bibliography update 
 - Priority arguments added to membership methods for numerical semigroups
 
